# HGNN

./: .gitignore  README.md  pyproject.toml
packagehgnn/: hgnn.py  multihead.py  utils.py
